# Codex-Visual-Office

./: .gitignore  AGENTS.md  RELEASE_STATUS.md  VERSION  drizzle.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
docs/: PRD.md  ROADMAP.md  SCOPE_LOCK.md  app-first-runtime-diagnostics.md  backup-restore-recovery-guide.md  code-signing-notarization-plan.md  commercialization-pre-scope.md  desktop-app-developer-diagnostics-boundary.md  desktop-app-information-architecture.md  desktop-app-settings-boundary.md  desktop-app-user-surface-vs-diagnostics-boundary.md  developer-manual.md  distribution-option-matrix.md  final-acceptance-report-1.0.md  final-rc-validation-matrix.md  final-verification-manifest-1.0.md  go-no-go-checklist.md  known-limitations-1.0.md  local-setup-guide.md  open-source-desktop-app-surface.md  packaging-risk-register.md  phase-1-visual-prototype-closeout.md  phase-10-real-project-workspace-hardening-scope-lock.md  phase-10-real-project-workspace-hardening.md  phase-11-codex-agent-workflow-2-scope-lock.md  phase-11-codex-agent-workflow-2.md  phase-12-safety-permission-hardening-scope-lock.md  phase-12-safety-permission-hardening.md  phase-13-desktop-beta-distribution-candidate-scope-lock.md  phase-13-desktop-beta-distribution-candidate.md  phase-14-release-candidate-qa-docs-scope-lock.md  phase-14-release-candidate-qa-docs.md  phase-15-release-candidate-stabilization-scope-lock.md  (+167 more)
lib/: mock-data.ts  status.ts  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+253 files in other folders)
