[package]
name = "codex-visual-office-tauri-prototype"
version = "0.1.0"
description = "Prototype-only Mac-first Tauri wrapper for the existing local browser app."
authors = ["Codex Visual Office"]
edition = "2021"
publish = false

[lib]
name = "codex_visual_office_tauri_prototype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
